// Vitest Snapshot v1

exports[`Button > Button baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-61a49c84=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-61a49c84=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  
</div>
`;

exports[`Button > Button blockVue demo works fine 1`] = `
<div
  class="row"
  data-v-75d4286a=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block"
    data-v-75d4286a=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button ghostVue demo works fine 1`] = `
<div
  class="row"
  data-v-511c0528=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--ghost"
    data-v-511c0528=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      幽灵按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle t-button--ghost"
    data-v-511c0528=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      幽灵按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--ghost"
    data-v-511c0528=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      幽灵按钮
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button groupVue demo works fine 1`] = `
<div
  class="row"
  data-v-2d21dd48=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
    data-v-2d21dd48=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
    data-v-2d21dd48=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button iconVue demo works fine 1`] = `
<div
  class="row"
  data-v-c77683a8=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
    data-v-c77683a8=""
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-app"
      fill="none"
      height="1em"
      style="font-size: 24px;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--loading"
    data-v-c77683a8=""
    role="button"
    type="button"
  >
    <div
      class="t-loading"
      style="font-size: 20px;"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        style="animation-duration: 800ms; width: 20px; height: 20px;"
        version="1.1"
        viewBox="0 0 12 12"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="0"
          y="0"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <!--v-if-->
      <!---->
    </div>
    <span
      class="t-button__content"
    >
      
      加载中
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
    data-v-c77683a8=""
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-search"
      fill="none"
      height="1em"
      style="font-size: 24px;"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <span
      class="t-button__content"
    >
      <!---->
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-7c375b15=""
>
  <h1
    class="title"
    data-v-7c375b15=""
  >
    Button 按钮
  </h1>
  <p
    class="summary"
    data-v-7c375b15=""
  >
    按钮用于开启一个闭环的操作任务，如“删除”对象、“购买”商品等。
  </p>
  <div
    class="row"
    data-v-7c375b15=""
  >
     点击禁用 
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-7c375b15=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        动态禁用
        
      </span>
      <!---->
    </button>
  </div>
  <div
    data-v-7c375b15=""
  >
     默认禁用 
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--disabled"
      data-v-7c375b15=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        默认禁用
        
      </span>
      <!---->
    </button>
  </div>
  <!-- &lt;tdesign-demo-block title="01 组件类型" summary="基础按钮"&gt;
      &lt;BaseButtonDemo /&gt;
    &lt;/tdesign-demo-block&gt;

    &lt;tdesign-demo-block summary="图标按钮"&gt;
      &lt;iconDemo /&gt;
    &lt;/tdesign-demo-block&gt;

    &lt;tdesign-demo-block summary="幽灵按钮"&gt;
      &lt;ghostDemo /&gt;
    &lt;/tdesign-demo-block&gt;

    &lt;tdesign-demo-block summary="组合按钮"&gt;
      &lt;groupDemo /&gt;
    &lt;/tdesign-demo-block&gt;

    &lt;tdesign-demo-block summary="通栏按钮"&gt;
      &lt;blockDemo /&gt;
    &lt;/tdesign-demo-block&gt;

    &lt;tdesign-demo-block title="02 组件状态" summary="按钮禁用态"&gt;
      &lt;statusDemo /&gt;
    &lt;/tdesign-demo-block&gt;

    &lt;tdesign-demo-block title="03 组件样式" summary="按钮尺寸"&gt;
      &lt;sizeDemo /&gt;
    &lt;/tdesign-demo-block&gt;

    &lt;tdesign-demo-block summary="按钮形状"&gt;
      &lt;shapeDemo /&gt;
    &lt;/tdesign-demo-block&gt;

    &lt;tdesign-demo-block summary="按钮主题"&gt;
      &lt;themeDemo /&gt;
    &lt;/tdesign-demo-block&gt; -->
</div>
`;

exports[`Button > Button shapeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-3fc3ed04=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-3fc3ed04=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      aria-label="搜索"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
      data-v-3fc3ed04=""
      role="button"
      type="button"
    >
      <svg
        class="t-icon t-icon-search"
        fill="none"
        height="1em"
        style="font-size: 24px;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <span
        class="t-button__content"
      >
        <!---->
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--round"
      data-v-3fc3ed04=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      aria-label="搜索"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--circle"
      data-v-3fc3ed04=""
      role="button"
      type="button"
    >
      <svg
        class="t-icon t-icon-search"
        fill="none"
        height="1em"
        style="font-size: 24px;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <span
        class="t-button__content"
      >
        <!---->
      </span>
      <!---->
    </button>
  </div>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block rectangle-button"
    data-v-3fc3ed04=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
  
</div>
`;

exports[`Button > Button sizeVue demo works fine 1`] = `
<div
  class="row"
  data-v-0a874498=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
    data-v-0a874498=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 48
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
    data-v-0a874498=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 40
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-small t-button--base t-button--primary t-button--rectangle"
    data-v-0a874498=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 32
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
    data-v-0a874498=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 28
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-096a7265=""
  >
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-096a7265=""
  >
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  
</div>
`;

exports[`Button > Button themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-42dcdba6=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--default t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-42dcdba6=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-42dcdba6=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--danger t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--danger t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-42dcdba6=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--light t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--light t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  
</div>
`;
